--- a/ubana/CMakeLists.txt
+++ b/ubana/CMakeLists.txt
@@ -20,5 +20,6 @@ add_subdirectory(SinglePhotonAnalysis)
 add_subdirectory(TreeReader)
 add_subdirectory(Arborist)
 add_subdirectory(searchingfornues)
+add_subdirectory(RecoAnalysis)
 
 add_subdirectory(redk2nu)
